# trading-bot

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
data/: binance.yaml
protos/binance/: common.proto  general.proto  market_data.proto  wallet.proto
src/: binance.rs  client.rs  main.rs  protos.rs
src/common/: api_feed.rs  config.rs  mod.rs  utils.rs
src/protos/: mod.rs  wallet.proto
