[package]
name = "trading-bot"
version = "0.1.0"
authors = ["shardamaka <mariusalexandrutache@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-rust = "2.22.1"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
protobuf = "2.22.1"