[package]
name = "trading_bot"
version = "0.1.0"
authors = ["shardamaka <mariusalexandrutache@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
hmac = "0.11.0"
sha2 = "0.9.5"

[lib]
name = "common"
path = "src/common/mod.rs"